--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Django stuff:
+*.log
+db.sqlite3
+*.pyc
+
+# Media and Static directories
+/media/
+!/media/.gitkeep
+
+# Secrets
+secrets.json
+
+# vscode
+.vscode
